--- a/.github/workflows/update-trm.yml
+++ b/.github/workflows/update-trm.yml
@@ -1,11 +1,11 @@
 name: Actualizar TRM Diario
 permissions:
-  contents: write
-  pages: write
+  contents: write   # permite escribir en el repo
+  pages: write      # (opcional) si usas GitHub Pages
 
 on:
-  # Cada día a las 14:05 UTC (09:05 hora Bogotá)
   schedule:
+    # Cada día a las 14:05 UTC (09:05 hora Bogotá)
     - cron: '05 14 * * *'
   workflow_dispatch:
 
@@ -27,19 +27,17 @@ jobs:
 
       - name: Generar trm.json
         run: |
-          cat <<EOF > trm.json
-{
-  "trm": ${{ steps.fetch.outputs.trm }},
-  "updated_at": "$(date --utc +'%Y-%m-%dT%H:%M:%SZ')"
-}
-EOF
+          echo '{' > trm.json
+          echo "  \"trm\": ${{ steps.fetch.outputs.trm }}," >> trm.json
+          echo "  \"updated_at\": \"$(date --utc +'%Y-%m-%dT%H:%M:%SZ')\"" >> trm.json
+          echo '}' >> trm.json
 
       - name: Commit y push de trm.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add trm.json
           git commit -m "Actualiza TRM ${{ steps.fetch.outputs.trm }} ($(date +'%Y-%m-%d'))" || echo "Sin cambios"
           git push
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
