--- a/.github/workflows/update-trm.yml
+++ b/.github/workflows/update-trm.yml
@@ -1,12 +1,11 @@
 name: Actualizar TRM Diario
 permissions:
-  contents: write   # permite escribir en el repo
-  pages: write      # (opcional) si usas GitHub Pages
+  contents: write
+  pages: write
 
 on:
   schedule:
-    # Cada día a las 14:05 UTC (09:05 hora Bogotá)
-    - cron: '05 14 * * *'
+    - cron: '05 14 * * *'  # 09:05 Bogotá
   workflow_dispatch:
 
 jobs:
@@ -18,11 +17,14 @@ jobs:
       - name: Instalar jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Obtener TRM desde exchangerate.host
+      - name: Obtener y depurar TRM
         id: fetch
         run: |
-          TRM=$(curl -s "https://api.exchangerate.host/latest?base=USD&symbols=COP" \
-            | jq -r '.rates.COP')
+          echo "=== Respuesta cruda de la API ==="
+          curl -s "https://api.exchangerate.host/latest?base=USD&symbols=COP" > response.json
+          cat response.json
+          TRM=$(jq -r '.rates.COP' response.json)
+          echo "=== TRM extraída: $TRM ==="
           echo "trm=$TRM" >> $GITHUB_OUTPUT
 
       - name: Generar trm.json
