--- a/.github/workflows/update-trm.yml
+++ b/.github/workflows/update-trm.yml
@@ -1,32 +1,29 @@
-# .github/workflows/update-trm.yml
 name: Actualizar TRM Diario
 permissions:
-  contents: write   # permite escribir en el repo
-  pages: write      # opcional, si usas GitHub Pages
+  contents: write
 
 on:
-  # Se ejecuta cada día a las 14:05 UTC (09:05 hora Bogotá)
   schedule:
-    - cron: '05 14 * * *'
+    - cron: '05 14 * * *'  # corre cada día a las 14:05 UTC (09:05 Bogotá)
   workflow_dispatch:
 
 jobs:
   update-trm:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout del repositorio
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Instalar jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Obtener y depurar TRM
+      - name: Obtener y depurar TRM (Frankfurter)
         id: fetch
         run: |
-          echo "=== Respuesta cruda de la API ==="
-          curl -s "https://api.exchangerate.host/latest?base=USD&symbols=COP" > response.json
+          echo "=== Respuesta cruda Frankfurter ==="
+          curl -s "https://api.frankfurter.app/latest?from=USD&to=COP" > response.json
           cat response.json
+          # extraemos .rates.COP
           TRM=$(jq -r '.rates.COP' response.json)
           echo "=== TRM extraída: $TRM ==="
           echo "trm=$TRM" >> $GITHUB_OUTPUT
